<?xml version="1.0" encoding="utf-8"?>



<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/add_meeting_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.AddMeetingActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scroll_view_add_meeting_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/dp10"
            tools:context=".ui.AddMeetingActivity">

            <!-- TITLE *********************************************************************** -->
            <!-- TEXT VIEW -->

            <TextView
                android:id="@+id/add_meeting_tv_topic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/topic"
                app:layout_constraintBottom_toBottomOf="@+id/add_meeting_text_input_layout"
                app:layout_constraintEnd_toStartOf="@id/add_meeting_text_input_layout"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meeting_text_input_layout" />

            <!-- TEXT INPUT LAYOUT -->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_meeting_text_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_meeting_tv_topic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_80"
                app:hintEnabled="false"
                app:errorEnabled="true">

                <!-- TEXT INPUT EDIT TEXT -->

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/add_meeting_txt_topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/name"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!-- BLOC: HOUR ************************************************************************ -->

            <!-- TEXT VIEW -->

            <TextView
                android:id="@+id/add_meeting_tv_hour_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/hour"
                app:layout_constraintBottom_toBottomOf="@+id/add_meeting_b_hour"
                app:layout_constraintEnd_toStartOf="@+id/add_meeting_b_hour"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meeting_b_hour" />

            <!-- BUTTON -->

            <Button
                android:id="@+id/add_meeting_b_hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hour_base"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_80"
                app:layout_constraintStart_toEndOf="@+id/add_meeting_tv_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_meeting_text_input_layout" /><!-- BLOC: HOUR ************************************************************************ -->

            <!-- BLOC: DATE ************************************************************************ -->

            <!-- TEXT VIEW -->

            <TextView
                android:id="@+id/add_meeting_tv_date_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/date"
                app:layout_constraintBottom_toBottomOf="@+id/add_meeting_b_date"
                app:layout_constraintEnd_toStartOf="@+id/add_meeting_b_date"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meeting_b_date" />

            <!-- BUTTON -->

            <Button
                android:id="@+id/add_meeting_b_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_random"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_80"
                app:layout_constraintStart_toEndOf="@+id/add_meeting_tv_topic"
                app:layout_constraintTop_toBottomOf="@+id/add_meeting_b_hour" />


            <!-- ROOM ************************************************************************ -->

            <!-- TEXT VIEW -->

            <TextView
                android:id="@+id/add_meeting_tv_room"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/room"
                app:layout_constraintBottom_toBottomOf="@+id/add_meeting_spinner_room"
                app:layout_constraintEnd_toStartOf="@id/add_meeting_spinner_room"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meeting_spinner_room" />

            <!-- SPINNER -->

            <Spinner
                android:id="@+id/add_meeting_spinner_room"
                style="@style/Spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="@integer/percentage_horizontal_add_meeting_80"
                app:layout_constraintStart_toStartOf="@+id/add_meeting_b_date"
                app:layout_constraintTop_toBottomOf="@+id/add_meeting_b_date" />

            <!-- MEMBERS ********************************************************************* -->

            <!-- TEXT VIEW -->

            <TextView
                android:id="@+id/add_meeting_tv_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp8"
                android:text="@string/member"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meeting_spinner_room" />

            <!-- RECYCLER VIEW -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/member_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0"
                android:nestedScrollingEnabled="true"
                android:paddingBottom="@dimen/dp52"
                app:layout_constraintTop_toBottomOf="@id/add_meeting_tv_member"
                tools:listitem="@layout/item_member" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <!-- FAB -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dp16"
        android:contentDescription="@string/but_add_meeting_to_list"
        android:src="@drawable/ic_add_circle_outline_24px"
        app:backgroundTint="@android:color/holo_green_dark" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>