<resources>
    <string name="app_name">MaeruOC</string>

    <!--  xml row meeting  -->
    <string name="text_meeting_hour_room">Meeting A - 15h00 - Mario</string>
    <string name="text_mail">contact@lamzone.fr</string>
    <string name="content_description_button_delete">button_delete</string>
    <string name="rechercher">rechercher</string>
    <string name="but_add_new_meeting">but add new meeting</string>
    <string name="topic">Title :</string>
    <string name="name">Name</string>
    <string name="hour">Hour</string>
    <string name="hour_base">09:09</string>
    <string name="room">Room :</string>
    <string name="member">Member :</string>
    <string name="but_add_meeting_to_list">but add meeting to list</string>
    <string name="nom_pr_nom">Hideki An</string>
    <string name="color_user_replace_pic">color user replace pic</string>
    <string name="filtrer_par_date">Filter by date</string>
    <string name="filtrer_par_salle">Filter by room</string>
    <string name="supprimer_les_filtres">delete all filters</string>
    <string name="filtrer">Filtrer</string>
    <string name="filter_by_title">Filter by title</string>
    <string name="date">Date</string>
    <string name="date_random">01-01-2021</string>


</resources>