<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_filter"
        android:icon="@drawable/ic_filter_list_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/filtrer">

        <menu>
            <item
                android:id="@+id/filter_title"
                android:icon="@drawable/ic_title_24"
                app:actionViewClass="androidx.appcompat.widget.SearchView"
                app:showAsAction="collapseActionView"
                android:title="@string/filter_by_title"/>

            <item
                android:id="@+id/filter_date"
                android:icon="@drawable/ic_date_range_24dp"
                app:actionViewClass="androidx.appcompat.widget.SearchView"
                app:showAsAction="collapseActionView"
                android:title="@string/filtrer_par_date"/>

            <item
                android:id="@+id/filter_room"
                android:icon="@drawable/ic_meeting_room_24px"
                app:actionViewClass="androidx.appcompat.widget.SearchView"
                app:showAsAction="collapseActionView"
                android:title="@string/filtrer_par_salle"/>
        </menu>
    </item>
</menu>